--- a/environment.yml
+++ b/environment.yml
@@ -1,11 +1,52 @@
-name: autoenv
+name: env
+channels:
+  - conda-forge
+  - defaults
 dependencies:
-  - jupyter=1.0.0=py37_7
-  - jupyter_client=5.2.4=py37_0
-  - jupyter_console=6.0.0=py37_0
-  - jupyter_core=4.4.0=py37_0
-  - nbconvert=5.3.1=py37_0
-  - nbformat=4.4.0=py37_0
-  - pip=18.1=py37_0
-  - pip:
-    - lightkurve==1.2.0
+  - bzip2=1.0.8=h0b31af3_2
+  - ca-certificates=2019.11.28=hecc5488_0
+  - cairo=1.16.0=he1c11cd_1002
+  - certifi=2019.11.28=py37_0
+  - cycler=0.10.0=py_2
+  - fontconfig=2.13.1=h6b1039f_1001
+  - freetype=2.10.0=h24853df_1
+  - gettext=0.19.8.1=h46ab8bc_1002
+  - glib=2.58.3=py37h577aef8_1002
+  - graphite2=1.3.13=h2098e52_1000
+  - harfbuzz=2.4.0=hd8d2a14_3
+  - icu=64.2=h6de7cb9_1
+  - kiwisolver=1.1.0=py37ha1b3eb9_0
+  - libblas=3.8.0=14_openblas
+  - libcblas=3.8.0=14_openblas
+  - libcxx=9.0.1=1
+  - libffi=3.2.1=h6de7cb9_1006
+  - libgfortran=4.0.0=2
+  - libiconv=1.15=h01d97ff_1005
+  - liblapack=3.8.0=14_openblas
+  - libopenblas=0.3.7=h3d69b6c_6
+  - libpng=1.6.37=h2573ce8_0
+  - libxml2=2.9.10=h53d96d6_0
+  - llvm-openmp=9.0.1=h40edb58_0
+  - matplotlib=3.1.2=py37_1
+  - matplotlib-base=3.1.2=py37h11da6c2_1
+  - ncurses=6.1=h0a44026_1002
+  - numpy=1.16.5=py37hde6bac1_0
+  - openssl=1.1.1d=h0b31af3_0
+  - pcre=8.43=h4a8c4bd_0
+  - pip=19.3.1=py37_0
+  - pixman=0.38.0=h01d97ff_1003
+  - pyparsing=2.4.6=py_0
+  - python=3.7.3=h5c2c468_2
+  - python-dateutil=2.8.1=py_0
+  - readline=8.0=hcfe32e1_0
+  - setuptools=44.0.0=py37_0
+  - six=1.13.0=py37_0
+  - sqlite=3.30.1=h93121df_0
+  - tectonic=0.1.12=h9ab2c78_0
+  - tk=8.6.10=hbbe82c9_0
+  - tornado=6.0.3=py37h0b31af3_0
+  - wheel=0.33.6=py37_0
+  - xz=5.2.4=h1de35cc_1001
+  - zlib=1.2.11=h0b31af3_1006
+prefix: ./env
+
