--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,9 +10,9 @@ jobs:
       - uses: actions/checkout@v2
       - uses: goanpeca/setup-miniconda@v1
         with:
-           activate-environment: nextex
+           activate-environment: env
            environment-file: environment.yml
-           python-version: 3.7
+           python-version: 3.7.6
       - name: Compile the paper
         shell: bash -l {0}
         run: cd tex && make
