--- a/environment.yml
+++ b/environment.yml
@@ -14,6 +14,7 @@ dependencies:
   - graphite2=1.3.13
   - harfbuzz=2.4.0
   - icu=64.2
+  - jupyter=4.5.0
   - kiwisolver=1.1.0
   - libblas=3.8.0
   - libcblas=3.8.0
