--- a/environment.yml
+++ b/environment.yml
@@ -1,108 +1,12 @@
 name: env
 channels:
-  - conda-forge
   - defaults
+  - conda-forge
 dependencies:
-  - attrs=19.3.0
-  - backcall=0.1.0
-  - bleach=3.1.0
-  - ca-certificates=2019.11.28
-  - cairo=1.16.0
-  - certifi=2019.11.28
-  - cycler=0.10.0
-  - dbus=1.13.6
-  - decorator=4.4.1
-  - defusedxml=0.6.0
-  - entrypoints=0.3
-  - expat=2.2.5
-  - fontconfig=2.13.1
-  - freetype=2.10.0
-  - gettext=0.19.8.1
-  - glib=2.58.3
-  - graphite2=1.3.13
-  - harfbuzz=2.4.0
-  - icu=64.2
-  - importlib_metadata=1.3.0
-  - ipykernel=5.1.3
-  - ipython=7.11.1
-  - ipython_genutils=0.2.0
-  - ipywidgets=7.5.1
-  - jedi=0.15.2
-  - jinja2=2.10.3
-  - jpeg=9c
-  - jsonschema=3.2.0
-  - jupyter=1.0.0
-  - jupyter_client=5.3.4
-  - jupyter_console=6.0.0
-  - jupyter_core=4.6.1
-  - kiwisolver=1.1.0
-  - libblas=3.8.0
-  - libcblas=3.8.0
-  - libclang=8.0.1
-  - libcxx=9.0.1
-  - libffi=3.2.1
-  - libiconv=1.15
-  - liblapack=3.8.0
-  - libllvm8=8.0.1
-  - libopenblas=0.3.7
-  - libpng=1.6.37
-  - libsodium=1.0.17
-  - libxml2=2.9.10
-  - llvm-openmp=9.0.1
-  - markupsafe=1.1.1
-  - matplotlib=3.1.2
-  - matplotlib-base=3.1.2
-  - mistune=0.8.4
-  - more-itertools=8.0.2
-  - nbconvert=5.6.1
-  - nbformat=5.0.3
-  - ncurses=6.1
-  - notebook=6.0.1
-  - nspr=4.20
-  - nss=3.47
-  - numpy=1.16.5
-  - openssl=1.1.1d
-  - pandoc=2.9.1.1
-  - pandocfilters=1.4.2
-  - parso=0.5.2
-  - pcre=8.43
-  - pexpect=4.7.0
-  - pickleshare=0.7.5
-  - pip=19.3.1
-  - pixman=0.38.0
-  - prometheus_client=0.7.1
-  - prompt_toolkit=2.0.10
-  - ptyprocess=0.6.0
-  - pygments=2.5.2
-  - pyparsing=2.4.6
-  - pyqt=5.12.3
-  - pyrsistent=0.15.7
+  - tectonic
+  - matplotlib=3.1
+  - pip
   - python=3.7.6
-  - python-dateutil=2.8.1
-  - pyzmq=18.1.1
-  - qt=5.12.5
-  - qtconsole=4.6.0
-  - readline=8.0
-  - send2trash=1.5.0
-  - setuptools=44.0.0
-  - six=1.13.0
-  - sqlite=3.30.1
-  - tectonic=0.1.12
-  - terminado=0.8.3
-  - testpath=0.4.4
-  - tk=8.6.10
-  - tornado=6.0.3
-  - traitlets=4.3.3
-  - wcwidth=0.1.8
-  - webencodings=0.5.1
-  - wheel=0.33.6
-  - widgetsnbextension=3.5.1
-  - xz=5.2.4
-  - zeromq=4.3.2
-  - zipp=0.6.0
-  - zlib=1.2.11
-  - pip:
-    - pyqt5-sip==4.19.18
-    - pyqtwebengine==5.12.1
+  - jupyter
+  - numpy=1.16
 prefix: ./env
-
